--- a/src/app/components/perfil.component/perfil.component.css
+++ b/src/app/components/perfil.component/perfil.component.css
@@ -1,5 +1,5 @@
 /* ================================
-   VARIABLES (ya estaban en :host)
+   VARIABLES
    ================================ */
 :host {
   --nav-bg-color: #dbeafe; 
@@ -16,7 +16,7 @@
 }
 
 /* ================================
-   CONTENEDOR PERFIL (reutiliza navbar)
+   CONTENEDOR PERFIL
    ================================ */
 .custom-navbar {
   background-color: var(--nav-bg-color);
@@ -60,7 +60,6 @@
   overflow: hidden;
 }
 
-/* Imagen dentro del círculo */
 .user-icon-circle img {
   width: 100%;
   height: 100%;
@@ -75,7 +74,6 @@
   display: inline-block;
 }
 
-/* ARO EXTERIOR */
 .avatar-ring {
   padding: 0;
   background: none;
@@ -84,13 +82,10 @@
   transition: transform 0.3s ease;
 }
 
-
-/* HOVER */
 .avatar-ring:hover {
   transform: scale(1.05) rotate(1deg);
 }
 
-/* Asegura el fondo blanco interior */
 .avatar-ring .user-icon-circle {
   background-color: var(--white);
 }
@@ -108,7 +103,6 @@
   border: 3px solid var(--white);
 }
 
-/* COLORES */
 .status-active {
   background-color: #22c55e;
 }
@@ -116,7 +110,6 @@
 .status-inactive {
   background-color: #ef4444;
 }
-
 
 /* ================================
    TEXTO PERFIL
@@ -133,7 +126,7 @@
 }
 
 /* ================================
-   ESTADO USUARIO (Activo / Inactivo)
+   ESTADO USUARIO
    ================================ */
 .pill-item {
   background-color: var(--white);
@@ -195,7 +188,6 @@
   box-shadow: 0 6px 12px rgba(37, 99, 235, 0.15);
 }
 
-/* ICONO */
 .info-icon {
   background-color: rgba(37, 99, 235, 0.12);
   color: var(--accent-color);
@@ -208,7 +200,6 @@
   font-size: 1.4rem;
 }
 
-/* TEXTO */
 .info-text {
   display: flex;
   flex-direction: column;
@@ -278,10 +269,12 @@
   color: var(--accent-color);
 }
 
-/* Card de actividad */
+/* ================================
+   TARJETAS EVENTOS
+   ================================ */
 .activity-card {
-  background-color: #f8f9fa; /* fondo claro */
-  border: 1px solid #17a2b8; /* borde azul */
+  background-color: #f8f9fa;
+  border: 1px solid #17a2b8;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   padding: 1rem;
   border-radius: 1rem;
@@ -293,26 +286,18 @@
   box-shadow: 0 8px 20px rgba(0,0,0,0.15);
 }
 
-/* Título */
 .activity-title {
   font-weight: 700;
   font-size: 1.15rem;
   margin-bottom: 0.75rem;
-  color: #0d6efd; /* azul */
+  color: #0d6efd;
 }
 
-/* Información de cada línea */
 .activity-info {
   font-size: 0.95rem;
   color: #495057;
 }
 
-/* Icono de cada línea */
 .activity-icon {
   font-size: 1.1rem;
 }
-
-
-
-
-
