fix: partidoResultado component

--- a/src/app/components/navbar.component/navbar.component.html
+++ b/src/app/components/navbar.component/navbar.component.html
@@ -29,6 +29,13 @@
              routerLinkActive="active-link">
             <i class="bi bi-calendar-event-fill me-2"></i> Materiales
           </a>
+      
+           <li class="nav-item">
+          <a class="nav-link nav-pill-item me-2" 
+             [routerLink]="['/partido-resultado']" 
+             routerLinkActive="active-link">
+            <i class="bi bi-calendar-event-fill me-2"></i> Partido Resultado
+          </a>
         </li>
 
       </ul>
