--- a/src/app/components/navbar.component/navbar.component.html
+++ b/src/app/components/navbar.component/navbar.component.html
@@ -27,14 +27,14 @@
           <a class="nav-link nav-pill-item me-2" 
              [routerLink]="['/materiales']" 
              routerLinkActive="active-link">
-            <i class="bi bi-calendar-event-fill me-2"></i> Materiales
+            <i class="bi bi-box-seam me-2"></i> Materiales
           </a>
       
            <li class="nav-item">
           <a class="nav-link nav-pill-item me-2" 
              [routerLink]="['/partido-resultado']" 
              routerLinkActive="active-link">
-            <i class="bi bi-calendar-event-fill me-2"></i> Partido Resultado
+            <i class="bi bi-trophy-fill me-2"></i> Partido Resultado
           </a>
         </li>
 
