--- a/src/app/components/navbar.component/navbar.component.html
+++ b/src/app/components/navbar.component/navbar.component.html
@@ -31,6 +31,14 @@
           </a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link nav-pill-item me-2" 
+             [routerLink]="['/organizador']" 
+             routerLinkActive="active-link">
+             <i class="bi bi-people-fill me-2"></i> Gestión organizador
+          </a>
+        </li>
+
       </ul>
 
       <ul class="navbar-nav align-items-center">
