--- a/src/app/components/navbar.component/navbar.component.html
+++ b/src/app/components/navbar.component/navbar.component.html
@@ -39,6 +39,14 @@
           </a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link nav-pill-item me-2" 
+             [routerLink]="['/pagos']" 
+             routerLinkActive="active-link">
+             <i class="bi bi-cash-coin me-2"></i> Gestión pagos
+          </a>
+        </li>
+
       </ul>
 
       <ul class="navbar-nav align-items-center">
