--- a/src/app/components/home.component/home.component.html
+++ b/src/app/components/home.component/home.component.html
@@ -274,9 +274,14 @@
                   </div>
                 
                 </div>
-                <button *ngIf="authservices.isOrganizador() || authservices.isAdmin()" class="btn-edit-event" (click)="abrirModalEditarEvento($event, event)" title="Editar evento">
-                  <i class="bi bi-pencil-square"></i>
-                </button>
+                @if (authservices.isOrganizador() || authservices.isAdmin()) {
+                  <button 
+                    class="btn-edit-event" 
+                    (click)="abrirModalEditarEvento($event, event)" 
+                    title="Editar evento">
+                    <i class="bi bi-pencil-square"></i>
+                  </button>
+                }
               </div>
             </ng-container>
           </div>
